# hmm-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/commands/: add_command.rs  check_command.rs  clean_command.rs  dev_command.rs  git_command.rs  haxelib_command.rs  init_command.rs  install_command.rs  lock_command.rs  mod.rs  remove_command.rs  tohxml_command.rs  upgrade_command.rs
src/hmm/: dependencies.rs  haxelib.rs  json.rs
test-dev-command/: hmm.json
tests/: cli_tests.rs  test.rs
tests/cli/: add.rs  check.rs  clean.rs  dev.rs  git.rs  init.rs  install.rs  list.rs  lock.rs  mod.rs  remove.rs  to_hxml.rs  upgrade.rs
tests/common/: mod.rs
tests/samples/: hmm.json
