[package]
name = "hmm-rs"
version = "0.0.2"
edition = "2021"
authors = ["ninjamuffin99"]
description = "Managing haxelibs via Haxe Module Manager, in Rust 🦀"
repository = "https://github.com/ninjamuffin99/hmm-rs"
keywords = ["haxe", "haxelib", "hmm"]
license = "MIT OR Apache-2.0"
build = "src/build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.20", features = ["derive", "unicode", "wrap_help"] }
console = "0.16.2"
futures = "0.3.30"
futures-util = "0.3.30"
gix = { version = "0.79.0", default-features = false, features = [
    "revision",
    "index",
    "blocking-network-client",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
    "status",
    "zlib-ng",
    "serde",
    "max-performance",
    "verbose-object-parsing-errors",
    "tracing-detail",
] }
human_bytes = "0.4.3"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["json", "stream", "blocking"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
shadow-rs = { version = "1.1.1", default-features = false }
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.7"
urlencoding = "2.1.3"
owo-colors = "4"
zip = "5.1.1"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3"
tempfile = "3.13.0"

[build-dependencies]
shadow-rs = "1.1.1"

[[bin]]
name = "hmm-rs"

[profile.release]
strip = true
lto = true
